--- a/README.Rmd
+++ b/README.Rmd
@@ -280,9 +280,7 @@ To construct TMLE, we update the estimated nuisance parameters via a targeting p
 
 - `cvg.criteria` specifies how small the sample mean of the EIF piece for each variable should be to stop the iterative process. The recommendation is $n^{-1/2}$, where $n$ is the sample size.
 
-- `truncate_lower` and `truncate_upper` specify the lower and upper bounds to truncate $p(A=a\mid X)$, for <a href="https://www.codecogs.com/eqnedit.php?latex=a%20\in%20%7B0%2C1%7D" target="_blank">
-  $a \in \{0, 1\}$
-</a>. This helps avoid extreme values of the estimated propensity score.
+- `truncate_lower` and `truncate_upper` specify the lower and upper bounds to truncate $p(A=a\mid X)$, for both $a=1$ and $a=0$. This helps avoid extreme values of the estimated propensity score.
 
 
 # Output
