update readme to include seuqntial regressions, density ratios, onestep, and TMLE

--- a/README.Rmd
+++ b/README.Rmd
@@ -143,10 +143,14 @@ est <- ADMGtmle(a=c(1,0),data=data_example_a,
 # Details on Estimation via Onestep Estimator and TMLE
 
 ![](nuisances.jpeg){width=100%}
-The package constructs the EIF based onestep estimator and TMLE for ACE through break down the EIF into several nuisance parameters, which falls into two categories: the <span style="color:deeppink">sequential regressions</span> and <span style="color:deeppink">density ratios</span>. The figure above illustrates the decomposition of the EIF into the nuisance parameters using the ADMG in example (a) above.  
+The package constructs the EIF based **Onestep estimator** and **TMLE** for ACE through break down the EIF into several nuisance parameters, which falls into two categories: the <span style="color:deeppink">sequential regressions</span> and <span style="color:deeppink">density ratios</span>. The figure above illustrates the decomposition of the EIF into the nuisance parameters using the ADMG in example (a) above.  
 
 To define these nuisance parameters, it is essential to learn the properties of the ADMG. Specifically, we require three definitions:  
-1. A topological ordering $\tau$ for variables in the ADMG.  
+1. A topological ordering $\tau$ for variables in the ADMG. With a graph oject, $\tau$ can be obtained using the `f.top_order()` function. See [Functions for learning the properties of ADMG] for more details.
+
+```{r, eval=T, warning=F, message=F}
+f.top_order(graph_a)
+```
 
 2. A set $\mathcal{L}$ that contains all the variables that is post the treatment variable according to $\tau$ and is bidirectedly connected to the treatment variable.  
 
@@ -272,6 +276,10 @@ est <- ADMGtmle(a=c(1,0),
                 ratio.method.M = "dnorm")
 ```
 
+## The Onestep estimator
+To construct the Onestep estimator, the `ADMGtmle()` function estimates all the sequential regressions and density ratios discussed above. These nuisance estimates are then used to construct an EIF estimate as well as the EIF-based Onestep estimator for the target parameter. The EIF estimate is further used to construct the confidence interval for the Onestep estimator.
+
+The function `ADMGtmle()` provides Onestep estimator by default.
 
 ## The TMLE
 To construct TMLE, we update the estimated nuisance parameters via a targeting procedure such that the corresponding part of the EIF for each variable is sufficiently small. Sometimes, the targeting procedure requires iterative updates between nuisance parameters. The function `ADMGtmle()` provides several arguments to control for this iterative process:
